--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  lottie: ^1.3.0
+
+
+
+lottie_dependencies:
+  flutter:
+    sdk: flutter
+
+# biblioteca de animações  
+  lottie: ^1.1.0
+
+
+
 
 dev_dependencies:
   flutter_test:
