implementacao_screen_roll

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ flutter:
      - imagens/frango.png
      - imagens/yakisoba.png
      - imagens/logo.png
+     - imagens/carne.png
+     - imagens/bebidas.png
     
 
 
