--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,8 +77,9 @@ flutter:
      - imagens/frango.png
      - imagens/yakisoba.png
      - imagens/logo.png
-     - imagens/carne.png
+     - imagens/costela.png
      - imagens/bebidas.png
+     - imagens/hotelBig.png
     
 
 
