--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - imagens/feijoada.png
-     - imagens/hamburguer.png
+     - imagens/Hamburguer.png
      - imagens/frango.png
      - imagens/logo.png
      - imagens/costela.png
@@ -86,6 +86,8 @@ flutter:
      - imagens/cerveja.png
      - imagens/coca.png
      - imagens/fanta.png
+     - imagens/lottie/scan_menu.json
+
   
     
 
