--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
      - imagens/cerveja.png
      - imagens/coca.png
      - imagens/fanta.png
+     - imagens/sucesso.png
      - imagens/lottie/scan_menu.json
 
   
